render links (WIP)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <title>NBE / React</title>
    <meta charset="UTF-8">
-   <script src="bower_components/react/react.js"></script>
+   <script src="bower_components/react/react-with-addons.js"></script>
    <link rel="stylesheet" href="app-fusebox/css/nbe-react.css" />
 </head>
 <body>
@@ -16,6 +16,7 @@
    <script src="build/port.js"></script>
    <script src="build/vertex.js"></script>
    <script src="build/edge.js"></script>
+   <script src="build/link.js"></script>
    <script src="build/graph.js"></script>
 
    <script src="build/app-fusebox.js"></script>
