Use immutable values to represent graph state.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
    <title>NBE / React</title>
    <meta charset="UTF-8">
-   <script src="bower_components/react/react-with-addons.js"></script>
+   <script src="bower_components/react/react.js"></script>
+   <script src="bower_components/immutable/dist/immutable.js"></script>
    <link rel="stylesheet" href="app-fusebox/css/theme.css" />
    <link rel="stylesheet" href="app-fusebox/css/nbe-react.css" />
 </head>
@@ -14,6 +15,8 @@
    </div>
 
    <script src="build/util.js"></script>
+   <script src="build/nbe.js"></script>
+
    <script src="build/port.js"></script>
    <script src="build/vertex.js"></script>
    <script src="build/edge.js"></script>
