--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
    </div>
 
    <script src="build/util.js"></script>
+   <script src="build/prelude.js"></script>
+
    <script src="build/port.js"></script>
    <script src="build/vertex.js"></script>
    <script src="build/edge.js"></script>
