Use immutable values to represent graph props (continued)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    </div>
 
    <script src="build/util.js"></script>
-   <script src="build/prelude.js"></script>
+   <script src="build/nbe.js"></script>
 
    <script src="build/port.js"></script>
    <script src="build/vertex.js"></script>
