Use AMD / RequireJS

--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
    <title>NBE / React</title>
    <meta charset="UTF-8">
-   <script src="bower_components/react/react.js"></script>
-   <script src="bower_components/immutable/dist/immutable.js"></script>
    <link rel="stylesheet" href="app-fusebox/css/theme.css" />
    <link rel="stylesheet" href="app-fusebox/css/nbe-react.css" />
 </head>
 <body>
    <h3>A Graph:</h3>
-   <div style="position: relative; width: 100%; height: 400px;">
+   <div style="position: relative; width: 100%; height: 420px;">
       <div id="root"></div>
    </div>
 
-   <script src="build/util.js"></script>
-   <script src="build/nbe.js"></script>
+   <script type="text/javascript">
+      var require = {
+         baseUrl: 'bower_components',
+         paths: {
+            react: 'react/react',
+            immutable: 'immutable/dist/immutable'
+         },
+         packages: [ {
+            name: 'app',
+            location: '../build',
+            main: 'app-fusebox'
+         } ]
+      };
+   </script>
 
-   <script src="build/port.js"></script>
-   <script src="build/vertex.js"></script>
-   <script src="build/edge.js"></script>
-   <script src="build/link.js"></script>
-   <script src="build/graph.js"></script>
+   <script data-main="app" src="bower_components/requirejs/require.js"></script>
 
-   <script src="build/app-fusebox.js"></script>
 </body>
 </html>
