Drag/drop for edge nodes (using interact)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
          baseUrl: 'bower_components',
          paths: {
             react: 'react/react',
-            immutable: 'immutable/dist/immutable'
+            immutable: 'immutable/dist/immutable',
+            interact: 'interact/interact'
          },
          packages: [ {
             name: 'app',
