--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          packages: [ {
             name: 'app',
             location: '../build',
-            main: 'app-fusebox'
+            main: 'dummy-fusebox/fusebox'
          } ]
       };
    </script>
