removed interact dependency

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
          baseUrl: 'bower_components',
          paths: {
             react: 'react/react',
-            immutable: 'immutable/dist/immutable',
-            interact: 'interact/interact'
+            immutable: 'immutable/dist/immutable'
          },
          packages: [ {
             name: 'app',
