--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
    <title>NBE / React</title>
    <meta charset="UTF-8">
+   <link rel="stylesheet" href="app-fusebox/css/history.css" />
    <link rel="stylesheet" href="app-fusebox/css/theme.css" />
    <link rel="stylesheet" href="app-fusebox/css/nbe-react.css" />
 </head>
