--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -13,15 +13,18 @@
         },
         packages: [ {
            name: 'tests',
-           main: 'stores/spec/history-store.spec',
+           main: 'tests/all',
            location: '../build'
         } ]
      };
   </script>
-  <script data-main='tests' src="../bower_components/requirejs/require.js"></script>
+  <script data-main='tests'
+          src="../bower_components/requirejs/require.js"></script>
 
-  <link rel="shortcut icon" type="image/png" href="../bower_components/jasmine/images/jasmine_favicon.png">
-  <link rel="stylesheet" href="../bower_components/jasmine/lib/jasmine-core/jasmine.css">
+  <link rel="shortcut icon" type="image/png"
+        href="../bower_components/jasmine/images/jasmine_favicon.png">
+  <link rel="stylesheet"
+        href="../bower_components/jasmine/lib/jasmine-core/jasmine.css">
 
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
