--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -8,29 +8,21 @@
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
   <script src="../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
 
+  <script src="../bower_components/requirejs/require.js"></script>
   <script type="text/javascript">
-     var require = {
+     require.config( {
         baseUrl: '../bower_components',
         paths: {
            react: 'react/react',
            immutable: 'immutable/dist/immutable'
         },
         packages: [ {
-           name: 'tests',
-           main: 'tests/all',
+           name: 'testing',
+           main: 'testing/all-specs',
            location: '../build'
         } ]
-     };
-  </script>
-
-  <script src="../bower_components/requirejs/require.js"></script>
-  <script>
-  require( [ 'tests' ], function() {
-    window.onload( function() {
-      jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
-      jasmine.getEnv().execute();
-    } );
-  } );
+     } );
+     require( [ 'testing' ] );
   </script>
 
   <link rel="shortcut icon" type="image/png"
