--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
    <title>NBE / React</title>
    <meta charset="UTF-8">
-   <link rel="stylesheet" href="app-fusebox/css/history.css" />
    <link rel="stylesheet" href="app-fusebox/css/theme.css" />
    <link rel="stylesheet" href="app-fusebox/css/nbe-react.css" />
+   <link rel="stylesheet" href="app-fusebox/css/demo.css" />
 </head>
 <body>
-   <h3>A Graph:</h3>
-   <div style="position: relative; width: 100%; height: 420px;">
-      <div id="root"></div>
-   </div>
+  <header>
+    <h3>A Graph:</h3>
+  </header>
+  <content>
+    <div id="demo-root"></div>
+  </content>
 
    <script type="text/javascript">
       var require = {
