--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
       var require = {
          baseUrl: 'bower_components',
          paths: {
-            react: 'react/react',
-            immutable: 'immutable/dist/immutable'
+           lodash: 'lodash/lodash',
+           react: 'react/react',
+           dagre: 'dagre/dist/dagre.core',
+           graphlib: 'graphlib/dist/graphlib.core',
+           immutable: 'immutable/dist/immutable'
+         },
+         // dagre dependencies:
+         shim: {
+           lodash: { exports: '_' },
+           graphlib: { deps: [ 'lodash' ], exports: 'graphlib' },
+           dagre: { deps: [ 'graphlib', 'lodash' ], exports: 'dagre' },
          },
          packages: [ {
             name: 'app',
