--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -2,11 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>nbe-react specs (Jasmine Spec Runner v2.3.4)</title>
+  <title>wireflow specs (Jasmine Spec Runner v2.3.4)</title>
 
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
   <script src="../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
+  <script>
+    var runJasmine = window.onload;
+    window.onload = function() {};
+  </script>
 
   <script src="../bower_components/requirejs/require.js"></script>
   <script type="text/javascript">
@@ -22,7 +26,7 @@
            location: '../build'
         } ]
      } );
-     require( [ 'testing' ] );
+     require( [ 'testing' ], runJasmine );
   </script>
 
   <link rel="shortcut icon" type="image/png"
