--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>nbe-react specs (Jasmine Spec Runner v2.3.4)</title>
+  <title>wireflow specs (Jasmine Spec Runner v2.3.4)</title>
 
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
@@ -22,7 +22,10 @@
            location: '../build'
         } ]
      } );
-     require( [ 'testing' ] );
+     var runJasmine = window.onload;
+     require( [ 'testing' ], function() {
+       runJasmine();
+     } );
   </script>
 
   <link rel="shortcut icon" type="image/png"
