--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -7,6 +7,10 @@
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
   <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
   <script src="../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
+  <script>
+    var runJasmine = window.onload;
+    window.onload = function() {};
+  </script>
 
   <script src="../bower_components/requirejs/require.js"></script>
   <script type="text/javascript">
@@ -22,10 +26,7 @@
            location: '../build'
         } ]
      } );
-     var runJasmine = window.onload;
-     require( [ 'testing' ], function() {
-       runJasmine();
-     } );
+     require( [ 'testing' ], runJasmine );
   </script>
 
   <link rel="shortcut icon" type="image/png"
