Added more spec tests. Fixed layout-store Remove-action-handling.

--- a/demos/fusebox/index.html
+++ b/demos/fusebox/index.html
@@ -40,7 +40,7 @@
       shim: {
         lodash: { exports: '_' },
         graphlib: { deps: [ 'lodash' ], exports: 'graphlib' },
-        dagre: { deps: [ 'graphlib', 'lodash' ], exports: 'dagre' },
+        dagre: { deps: [ 'graphlib', 'lodash' ], exports: 'dagre' }
       }
   };
   </script>
