--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -17,14 +17,22 @@
      require.config( {
         baseUrl: '../bower_components',
         paths: {
-           react: 'react/react',
-           immutable: 'immutable/dist/immutable'
+          lodash: 'lodash/lodash',
+          react: 'react/react',
+          dagre: 'dagre/dist/dagre.core',
+          graphlib: 'graphlib/dist/graphlib.core',
+          immutable: 'immutable/dist/immutable'
         },
         packages: [ {
            name: 'testing',
            main: 'testing/all-specs',
            location: '../build'
-        } ]
+        } ],
+        shim: {
+          lodash: { exports: '_' },
+          graphlib: { deps: [ 'lodash' ], exports: 'graphlib' },
+          dagre: { deps: [ 'graphlib', 'lodash' ], exports: 'dagre' }
+        }
      } );
      require( [ 'testing' ], runJasmine );
   </script>
