(#4) upgraded React to v0.14.x

--- a/demos/fusebox/index.html
+++ b/demos/fusebox/index.html
@@ -32,6 +32,7 @@
       paths: {
         lodash: 'lodash/lodash',
         react: 'react/react',
+        'react-dom': 'react/react-dom',
         dagre: 'dagre/dist/dagre.core',
         graphlib: 'graphlib/dist/graphlib.core',
         immutable: 'immutable/dist/immutable'
