--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -19,6 +19,7 @@
         paths: {
           lodash: 'lodash/lodash',
           react: 'react/react',
+          'react-dom': 'react/react-dom',
           dagre: 'dagre/dist/dagre.core',
           graphlib: 'graphlib/dist/graphlib.core',
           immutable: 'immutable/dist/immutable'
