--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -4,20 +4,20 @@
   <meta charset="utf-8">
   <title>wireflow specs (Jasmine Spec Runner v2.3.4)</title>
 
-  <script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
-  <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
-  <script src="../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
+  <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+  <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+  <script src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
   <script>
     var runJasmine = window.onload;
     window.onload = function() {};
   </script>
 
-  <script src="../bower_components/requirejs/require.js"></script>
+  <script src="../node_modules/requirejs/require.js"></script>
   <script type="text/javascript">
      require.config( {
-        baseUrl: '../bower_components',
+        baseUrl: '../node_modules',
         paths: {
-          lodash: 'lodash/lodash',
+          lodash: 'lodash/index',
           react: 'react/react',
           'react-dom': 'react/react-dom',
           dagre: 'dagre/dist/dagre.core',
@@ -39,9 +39,9 @@
   </script>
 
   <link rel="shortcut icon" type="image/png"
-        href="../bower_components/jasmine/images/jasmine_favicon.png">
+        href="../node_modules/jasmine-core/images/jasmine_favicon.png">
   <link rel="stylesheet"
-        href="../bower_components/jasmine/lib/jasmine-core/jasmine.css">
+        href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
 
 </head>
 
