(#6) fixed NPM bundle by including `lib`

--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -27,7 +27,7 @@
         packages: [ {
            name: 'testing',
            main: 'testing/all-specs',
-           location: '../build'
+           location: '../lib'
         } ],
         shim: {
           lodash: { exports: '_' },
