--- a/demos/fusebox/index.html
+++ b/demos/fusebox/index.html
@@ -17,16 +17,16 @@
 
   <script type="text/javascript">
     var require = {
-      baseUrl: '../../bower_components',
+      baseUrl: '../../node_modules',
       packages: [
         {
           name: 'app',
-          location: '../demos/fusebox/build',
+          location: '../demos/fusebox/lib',
           main: 'fusebox'
         },
         {
           name: 'wireflow',
-          location: '../build',
+          location: '../lib',
           main: 'wireflow'
         } ],
       paths: {
@@ -45,7 +45,7 @@
       }
   };
   </script>
-  <script data-main="app" src="../../bower_components/requirejs/require.js"></script>
+  <script data-main="app" src="../../node_modules/requirejs/require.js"></script>
 
 </body>
 </html>
